clusters/folly/apps/tronbyt/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tronbyt
  labels:
    kustomize.toolkit.fluxcd.io/prune: enabled
    app.kubernetes.io/name: tronbyt
    app.kubernetes.io/part-of: tronbyt
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
