clusters/folly/apps/tronbyt/07-rackstat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rackstat
  namespace: tronbyt
  labels: &labels
    app.kubernetes.io/name: rackstat
    app.kubernetes.io/part-of: tronbyt
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: rackstat
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rackstat
          image: ghcr.io/jonpulsifer/rackstat:latest@sha256:7f78580c1bb0a9cc11a2f5ebf02d1a646eaffa6df15fab6dc2feb40c0e52878a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 200m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
