clusters/folly/apps/tronbyt/08-rackstat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rackstat
  namespace: tronbyt
  labels:
    app.kubernetes.io/name: rackstat
    app.kubernetes.io/part-of: tronbyt
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rackstat
    app.kubernetes.io/part-of: tronbyt
