clusters/folly/apps/tronbyt/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tronbyt
  namespace: tronbyt
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-gateway
      protocol: HTTPS
      port: 443
      hostname: &hostname "tronbyt.${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tronbyt
  namespace: tronbyt
spec:
  parentRefs:
    - name: tronbyt
  hostnames:
    - "tronbyt.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: tronbyt
          port: 8000
